# ai-office-assistant

./: .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  inference.py  openenv.yaml  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: .gitignore  package-lock.json  package.json  server.js
backend/routes/: brief.js  calendar.js  command.js  rag.js  support.js  triage.js
backend/services/: calendarService.js  claudeService.js  gmailService.js  ragService.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CalendarScheduler.jsx  CommandBar.jsx  EmailTriage.jsx  MeetingBrief.jsx  RAGKnowledge.jsx  SupportReply.jsx
frontend/src/styles/: index.css
server/: app.py
