[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-office-assistant"
version = "1.0.0"
description = "AI-powered office assistant for email triage, calendar scheduling, customer support, meeting briefs and RAG knowledge base"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Variiish06"}
]
dependencies = [
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "inference:main"

[tool.setuptools]
packages = []
